# Shard

./: AI_GUIDE.md  BEGINNER_01.md  BEGINNER_02.md  BEGINNER_03.md  BEGINNER_04.md  BEGINNER_05.md  BEGINNER_06.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  GETTING_STARTED.md  LIBRARY_GUIDE.md  LICENSE  Makefile  PROJECT_01.md  PROJECT_02.md  PROJECT_03.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_OLD.md  README_V2.md  START_HERE.md  SYNTAX_GUIDE.md  a.out  build.rs  test.c  test_debug.shard  test_out
docs/: ARCHITECTURE.md
examples/: 01_hello.shard  01_hello_v2.shard  02_calculator.shard  02_memory_v2.shard  03_errors_v2.shard  03_loops.shard  04_comptime_v2.shard  04_conditionals.shard  05_functions.shard  06_entities.shard  07_simple_ai.shard  08_data_structures.shard  README.md  hello  hello_v2
src/: ast.rs  lexer.rs  lib.rs  main.rs  main_v2.rs  run.rs
src/backends/: mod.rs  native.rs  rust_ffi.rs
src/codegen/: mod.rs
src/error/: mod.rs
src/ir/: mod.rs
src/lexer/: v2.rs
src/parser/: mod.rs
src/stdlib/: ai.rs  lib_loader.rs  mod.rs
src/typechecker/: mod.rs
stdlib/ai/: ai.shard
stdlib/core/: core.shard
stdlib/io/: io.shard
stdlib/math/: math.shard
stdlib/os/: os.shard
tests/: compiler_tests.rs
