[package]
name = "shard"
version = "0.1.0"
edition = "2021"
authors = ["NLP-Core-Team"]
description = "Shard - A simple, safe, low-level programming language"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
codespan-reporting = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "shard"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
